--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base16ct = { version = "0.2.0", features = ["std"], default-features = false }
+bzip2 = "0.4.4"
+chrono = "0.4.38"
+deko = { version = "0.1.0", features = ["flate2", "bzip2"], default-features = false }
+digest = "0.10.7"
+flate2 = "1.0.35"
+quick-xml = { version = "0.37.1", features = ["serialize"], default-features = false }
+serde = { version = "1.0.215", features = ["derive"] }
+sha1 = "0.10.6"
+sha2 = "0.10.8"
