--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,11 @@ quick-xml = { version = "0.37.1", features = ["serialize"], default-features = f
 serde = { version = "1.0.215", features = ["derive"] }
 sha1 = "0.10.6"
 sha2 = "0.10.8"
+
+[dev-dependencies]
+arbitrary = { version = "1.4.1", features = ["derive"] }
+arbtest = "0.3.1"
+normalize-path = "0.2.1"
+random-dir = "0.2.4"
+tempfile = "3.14.0"
+walkdir = "2.5.0"
