--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "xar"
-version = "0.1.0"
+version.workspace = true
+license.workspace = true
 edition = "2021"
+
+[features]
+default = ["rsa"]
+rsa = ["dep:rsa"]
 
 [dependencies]
 base16ct = { version = "0.2.0", features = ["std"], default-features = false }
@@ -12,6 +17,7 @@ digest = "0.10.7"
 flate2 = "1.0.35"
 md5 = "0.7.0"
 quick-xml = { version = "0.37.1", features = ["serialize"], default-features = false }
+rsa = { version = "0.9.7", features = ["sha2"], optional = true }
 serde = { version = "1.0.215", features = ["derive"] }
 sha1 = "0.10.6"
 sha2 = "0.10.8"
@@ -23,3 +29,10 @@ normalize-path = "0.2.1"
 random-dir = "0.2.4"
 tempfile = "3.14.0"
 walkdir = "2.5.0"
+
+[workspace]
+members = [".", "cli"]
+
+[workspace.package]
+version = "0.1.0"
+license = "MIT"
