--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xar"
+name = "zar"
 version.workspace = true
 license.workspace = true
 edition = "2021"
@@ -15,7 +15,9 @@ chrono = "0.4.38"
 deko = { version = "0.1.0", features = ["flate2", "bzip2"], default-features = false }
 digest = "0.10.7"
 flate2 = "1.0.35"
+libc = "0.2.168"
 md5 = "0.7.0"
+normalize-path = "0.2.1"
 quick-xml = { version = "0.37.1", features = ["serialize"], default-features = false }
 rsa = { version = "0.9.7", features = ["sha2"], optional = true }
 serde = { version = "1.0.215", features = ["derive"] }
@@ -25,7 +27,6 @@ sha2 = "0.10.8"
 [dev-dependencies]
 arbitrary = { version = "1.4.1", features = ["derive"] }
 arbtest = "0.3.1"
-normalize-path = "0.2.1"
 random-dir = "0.2.4"
 tempfile = "3.14.0"
 walkdir = "2.5.0"
