--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,21 @@
 [package]
-name = "cli"
+name = "zar-cli"
 version.workspace = true
 edition = "2021"
 license.workspace = true
 
 [[bin]]
-name = "xar"
+name = "zar"
 path = "src/main.rs"
 
 [dependencies]
+clap = { version = "4.5.23", features = ["derive"] }
+zar = { path = ".." }
+
+[dev-dependencies]
+arbitrary = { version = "1.4.1", features = ["derive"] }
+arbtest = "0.3.1"
+random-dir = "0.2.4"
+similar-asserts = "1.6.0"
+tempfile = "3.14.0"
+test_bin = "0.4.0"
