--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,6 +15,7 @@ zar = { path = ".." }
 [dev-dependencies]
 arbitrary = { version = "1.4.1", features = ["derive"] }
 arbtest = "0.3.1"
+libc = "0.2.168"
 random-dir = "0.2.4"
 similar-asserts = "1.6.0"
 tempfile = "3.14.0"
