--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = "0.10.8"
 arbitrary = { version = "1.4.1", features = ["derive"] }
 arbtest = "0.3.1"
 random-dir = "0.2.4"
+similar-asserts = "1.6.0"
 tempfile = "3.14.0"
 walkdir = "2.5.0"
 
