--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,13 @@ jobs:
       TZ: Europe/Berlin
       RUST_BACKTRACE: 1
       SIMILAR_ASSERTS_MAX_STRING_LENGTH: 0
-      CIJAIL_ENDPOINTS: |
-        https://github.com/lyz-code/yamlfix/
-        https://pypi.org/simple/
-        https://files.pythonhosted.org/packages/
-        https://static.crates.io/crates/
-        https://index.crates.io/
-        https://github.com/rustsec/advisory-db
-        https://static.rust-lang.org/dist/
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.4
       - name: Lint
-        run: cijail ./ci/lint.sh
+        run: ./ci/lint.sh
       - name: Test
-        run: cijail ./ci/test.sh
+        run: ./ci/test.sh
   macos:
     runs-on: macos-latest
     env:
@@ -45,21 +37,10 @@ jobs:
     env:
       TZ: Europe/Berlin
       RUST_BACKTRACE: 1
-      CIJAIL_ENDPOINTS: |
-        https://github.com/lyz-code/yamlfix/
-        https://pypi.org/simple/
-        https://files.pythonhosted.org/packages/
-        https://static.crates.io/crates/
-        https://index.crates.io/
-        https://github.com/rustsec/advisory-db
-        https://static.rust-lang.org/dist/
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.4
       - name: Publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-          CIJAIL_ENDPOINTS: |
-            ${{ env.CIJAIL_ENDPOINTS }}
-            https://crates.io/api/v1/crates/new
-        run: cijail ./ci/publish.sh
+        run: ./ci/publish.sh
