--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://github.com/igankevich/zar"
 repository = "https://github.com/igankevich/zar"
 documentation = "https://docs.rs/zar"
 readme = "README.md"
-description = "XAR archive reader/writer library. Fuzz-tested against Apple xar."
+description = "XAR archive reader/writer library. Fuzz-tested against MacOS xar."
 keywords = ["xar", "archive"]
 categories = ["encoding", "filesystem"]
 include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
