--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo test --workspace --all-targets
+      - run: cargo test --quiet --no-fail-fast --workspace --all-targets -- --nocapture
   publish:
     needs: [ubuntu, macos]
     runs-on: ubuntu-latest
