--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ rsa = ["dep:rsa"]
 base16ct = { version = "0.2.0", features = ["std"], default-features = false }
 bzip2 = "0.4.4"
 chrono = "0.4.38"
-deko = { version = "0.1.0", features = ["flate2", "bzip2"], default-features = false }
+deko = { version = "0.1.0", features = ["flate2", "bzip2", "xz"], default-features = false }
 digest = "0.10.7"
 flate2 = "1.0.35"
 libc = "0.2.168"
@@ -31,6 +31,7 @@ rsa = { version = "0.9.7", features = ["sha2"], optional = true }
 serde = { version = "1.0.215", features = ["derive"] }
 sha1 = "0.10.6"
 sha2 = "0.10.8"
+xz = "0.1.0"
 
 [dev-dependencies]
 arbitrary = { version = "1.4.1", features = ["derive"] }
