Document file type.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,9 @@ members = [".", "cli"]
 [workspace.package]
 version = "0.1.0"
 license = "MIT"
+
+[lints.clippy]
+#unwrap_used = "deny"
+expect_used = "deny"
+panic = "deny"
+
