--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ categories = ["encoding", "filesystem"]
 include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
 
 [features]
-default = ["rsa", "apple-root-cert"]
-rsa = ["dep:rsa"]
+default = ["apple-root-cert"]
 # Include Apple root certificate as trusted by default.
 apple-root-cert = []
 
@@ -30,7 +29,7 @@ libc = "0.2.168"
 md5 = "0.7.0"
 normalize-path = "0.2.1"
 quick-xml = { version = "0.37.1", features = ["serialize"], default-features = false }
-rsa = { version = "0.9.7", features = ["sha2", "sha1"], optional = true }
+rsa = { version = "0.9.7", features = ["sha2", "sha1"] }
 serde = { version = "1.0.215", features = ["derive"] }
 sha1 = "0.10.6"
 sha2 = "0.10.8"
@@ -43,7 +42,6 @@ arbtest = "0.3.1"
 random-dir = "0.2.4"
 similar-asserts = "1.6.0"
 tempfile = "3.14.0"
-walkdir = "2.5.0"
 x509-cert = { version = "0.2.5", features = ["builder"] }
 
 [workspace]
