--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/igankevich/zar-ci:latest
-      options: --cap-add SYS_PTRACE
     env:
       TZ: Europe/Berlin
       RUST_BACKTRACE: 1
@@ -15,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.4
+      - name: Init
+        run: ./ci/init.sh
       - name: Lint
         run: ./ci/lint.sh
       - name: Test
@@ -30,7 +31,7 @@ jobs:
         uses: actions/checkout@v4.1.4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
       - run: cargo test --quiet --no-fail-fast --workspace --all-targets -- --nocapture
-  publish:
+  publish-crates:
     needs: [ubuntu, macos]
     runs-on: ubuntu-latest
     container:
@@ -45,3 +46,39 @@ jobs:
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
         run: ./ci/publish.sh
+  publish-binaries:
+    needs: [ubuntu, macos]
+    if: github.ref_type == 'tag'
+    permissions:
+      contents: write
+      packages: read
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/igankevich/zar-ci:latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.4
+      - name: Init
+        run: ./ci/init.sh
+      - name: Build static binaries
+        run: ./ci/build.sh
+      - name: Create release
+        uses: actions/create-release@v1
+        id: create_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+      - name: Upload binaries
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./zar-${{ github.ref_name }}.tar.gz
+          asset_name: stuckliste-${{ github.ref_name }}.tar.gz
+          asset_content_type: application/gzip
