--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./ci/publish.sh
   publish-binaries:
     needs: [ubuntu, macos]
-    if: github.ref_type == 'tag'
+    # if: github.ref_type == 'tag'
     permissions:
       contents: write
       packages: read
