--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 description = "XAR archive reader/writer library. Fuzz-tested against MacOS xar."
 keywords = ["xar", "archive"]
 categories = ["encoding", "filesystem"]
-include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
+include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE", "certs/*.der"]
 
 [features]
 default = ["apple-root-cert"]
