--- a/deny.toml
+++ b/deny.toml
@@ -8,7 +8,13 @@ ignore = [
 ]
 
 [licenses]
-allow = ["MIT", "Apache-2.0", "Unicode-3.0", "BSD-3-Clause"]
+allow = [
+    "Apache-2.0",
+    "BSD-3-Clause",
+    "MIT",
+    "Unicode-3.0",
+    "bzip2-1.0.6",
+]
 
 [licenses.private]
 ignore = true
