--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,8 +1,10 @@
-FROM rust:1.80.1
+FROM rust:1.92.0
 
 RUN export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -qq update \
-    && apt-get -qq install --no-install-recommends \
+    && sed -i -r -e 's|deb.debian.org/debian$|ftp.fau.de/debian|g' /etc/apt/sources.list.d/* \
+    && cat /etc/apt/sources.list.d/* \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
     pre-commit \
     python3-pip \
     libclang-dev \
@@ -14,19 +16,19 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 
 ENV CARGO_HOME=/usr/local/cargo \
     RUSTUP_HOME=/usr/local/rustup \
-    RUST_VERSION=1.80.1 \
+    RUST_VERSION=1.92.0 \
     PATH=/usr/local/cargo/bin:$PATH
 
 RUN rustup toolchain add nightly \
     --target x86_64-unknown-linux-gnu \
-    --component rustfmt miri llvm-tools-preview
-RUN rustup toolchain add 1.80.1 \
+    --component rustfmt --component miri --component llvm-tools-preview
+RUN rustup toolchain add 1.92.0 \
     --target x86_64-unknown-linux-gnu \
-    --component clippy rustfmt llvm-tools-preview
-RUN rustup target add --toolchain 1.80.1 \
+    --component clippy --component rustfmt --component llvm-tools-preview
+RUN rustup target add --toolchain 1.92.0 \
     x86_64-unknown-linux-musl
-RUN rustup default 1.80.1-x86_64-unknown-linux-gnu
-RUN cargo install --quiet --no-default-features --features native-certs cargo-deny
+RUN rustup default 1.92.0-x86_64-unknown-linux-gnu
+RUN cargo install --quiet --no-default-features cargo-deny
 
 RUN curl --location --silent --fail --output /usr/local/bin/shfmt https://github.com/mvdan/sh/releases/download/v3.8.0/shfmt_v3.8.0_linux_amd64 && \
     chmod +x /usr/local/bin/shfmt
