--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ x509-cert = { version = "0.2.5", features = ["builder"] }
 x509-cert = { version = "0.2.5", features = ["builder"] }
 
 [workspace.dependencies]
-zar = { path = ".", version = "*" }
+zar = { path = ".", version = "0.2.0" }
 
 [profile.dev.package.rsa]
 opt-level = 3
